Update stylesheets and ejs

--- a/src/components/greeting.ejs
+++ b/src/components/greeting.ejs
@@ -1,10 +1,19 @@
 <div class="container-fluid" id="greeting">
   <section id="greeting-content">
     <div id="greeting-content-text">
-      <h1 id="greeting-content-text-heading"><span id="greeting-content-text-heading-whoiam">I'm André Martins</span><i
-          id="greeting-content-text-heading-text-cursor" class="blinker-effect"></i></h1>
+      <h1 id="greeting-content-text-heading">
+        <span id="greeting-content-text-heading-whoiam">I'm André Martins</span
+        ><i
+          id="greeting-content-text-heading-text-cursor"
+          class="blinker-effect"
+        ></i>
+      </h1>
       <p>I'm a web developer and computing engineering student...</p>
     </div>
-    <img src="../public/programmer.png" alt="Programmer figure" id="greeting-content-fig">
+    <img
+      src="../public/programmer.png"
+      alt="Programmer figure"
+      id="greeting-content-fig"
+    />
   </section>
 </div>
