--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -13,13 +13,12 @@ $neutral-color-5: #343434;
 $neutral-color-6: #0f0f0f;
 
 $bg-color-1: $neutral-color-6;
-$bg-color-2: #0268bb;
+$bg-color-2: #014983;
 $bg-color-3: #1f1f1f;
-$bg-color-4: #013e70;
-$bg-color-5: #012a4b;
+$bg-color-4: #01345e;
 
 $primary-color: $neutral-color-0;
-$secondary-color: #FA538D;
+$secondary-color: #FF689D;
 
 $font-1: normal 300 1em 'Roboto', sans-serif;
 $font-2: normal 500 1em 'Inconsolata', monospace;
