--- a/src/components/page-header.ejs
+++ b/src/components/page-header.ejs
@@ -1,11 +1,15 @@
 <header id="page-header">
   <div>
-    <a href="#greeting">
-      <img id="page-header-logo" src="../public/emblem-light.svg" />
+    <a href="#greeting" title="Home">
+      <img
+        id="page-header-logo"
+        src="../public/emblem-light.png"
+        alt="coat of arms with a lion, surrounded by a laurel wreath and a crown above"
+      />
     </a>
   </div>
   <nav id="page-header-navbar">
-    <input id="page-header-navbar-toggle" type="checkbox" name="menu-toggle">
+    <input id="page-header-navbar-toggle" type="checkbox" name="menu-toggle" />
     <label id="page-header-navbar-menu" for="page-header-navbar-toggle">
       <div id="page-header-navbar-menu-icon"></div>
     </label>
