--- a/src/components/skills.ejs
+++ b/src/components/skills.ejs
@@ -1,68 +1,136 @@
 <div class="skills">
   <h3 class="skills-heading">Main skills</h3>
   <div class="skills-content">
-    <input type="radio" class="skills-content-radio" name="skill" id="radio-html" checked>
-    <input type="radio" class="skills-content-radio" name="skill" id="radio-css">
-    <input type="radio" class="skills-content-radio" name="skill" id="radio-javascript">
-    <input type="radio" class="skills-content-radio" name="skill" id="radio-python">
-    <input type="radio" class="skills-content-radio" name="skill" id="radio-c">
-    <input type="radio" class="skills-content-radio" name="skill" id="radio-sqlite">
+    <input
+      type="radio"
+      class="skills-content-radio"
+      name="skill"
+      id="radio-html"
+      checked
+    />
+    <input
+      type="radio"
+      class="skills-content-radio"
+      name="skill"
+      id="radio-css"
+    />
+    <input
+      type="radio"
+      class="skills-content-radio"
+      name="skill"
+      id="radio-javascript"
+    />
+    <input
+      type="radio"
+      class="skills-content-radio"
+      name="skill"
+      id="radio-python"
+    />
+    <input
+      type="radio"
+      class="skills-content-radio"
+      name="skill"
+      id="radio-c"
+    />
+    <input
+      type="radio"
+      class="skills-content-radio"
+      name="skill"
+      id="radio-sqlite"
+    />
     <div class="skills-content-labels">
-      <label class="skills-content-labels-label" for="radio-html"><i class="devicon-html5-plain"></i></label>
-      <label class="skills-content-labels-label" for="radio-css"><i class="devicon-css3-plain"></i></label>
-      <label class="skills-content-labels-label" for="radio-javascript"><i class="devicon-javascript-plain"></i></label>
-      <label class="skills-content-labels-label" for="radio-python"><i class="devicon-python-plain"></i></label>
-      <label class="skills-content-labels-label" for="radio-c"><i class="devicon-c-plain"></i></label>
-      <label class="skills-content-labels-label" for="radio-sqlite"><i class="devicon-sqlite-plain"></i></label>
+      <label class="skills-content-labels-label" for="radio-html"
+        ><i class="devicon-html5-plain" title="HTML5"></i
+      ></label>
+      <label class="skills-content-labels-label" for="radio-css"
+        ><i class="devicon-css3-plain" title="CSS3/ SCSS"></i
+      ></label>
+      <label class="skills-content-labels-label" for="radio-javascript"
+        ><i class="devicon-javascript-plain" title="JavaScript/ TypeScript"></i
+      ></label>
+      <label class="skills-content-labels-label" for="radio-python"
+        ><i class="devicon-python-plain" title="Python"></i
+      ></label>
+      <label class="skills-content-labels-label" for="radio-c"
+        ><i class="devicon-c-plain" title="C"></i
+      ></label>
+      <label class="skills-content-labels-label" for="radio-sqlite"
+        ><i class="devicon-sqlite-plain" title="SQLite"></i
+      ></label>
     </div>
     <div class="skills-content-text">
       <div class="skills-content-text-box" id="text-html">
         <h4 class="skills-content-text-box-heading">HTML5</h4>
-        <p>The HyperText Markup Language or HTML is the standard markup language for Web pages. It defines
-          the structure of web content using semantic elements defined by tags, like headings, paragraphs,
-          and sections, and allows inserting multimedia content, like images and videos. Its latest version is HTML5.
+        <p>
+          The HyperText Markup Language or HTML is the standard markup language
+          for Web pages. It defines the structure of web content using semantic
+          elements defined by tags, like headings, paragraphs, and sections, and
+          allows inserting multimedia content, like images and videos. Its
+          latest version is HTML5.
         </p>
-        <code class="skills-content-text-box-code">&lt;h1&gt;Hey Jude&lt;/h1&gt;</code>
+        <code class="skills-content-text-box-code"
+          >&lt;h1&gt;Hey Jude&lt;/h1&gt;</code
+        >
       </div>
       <div class="skills-content-text-box" id="text-css">
         <h4 class="skills-content-text-box-heading">CSS3/ SCSS</h4>
-        <p>The Cascading Style Sheets or CSS is a style sheet language used for describing the formatting
-          of a document written in a markup language, such as HTML. It's widely used in Web pages, defining,
-          among other things, their layout, colors, and fonts. Its latest version is CSS3.  SCSS is a syntax
-          of <abbr title="Syntactically Awesome StyleSheets">SASS</abbr> that is a superset of CSS, adding to
-          it some features.</p>
+        <p>
+          The Cascading Style Sheets or CSS is a style sheet language used for
+          describing the formatting of a document written in a markup language,
+          such as HTML. It's widely used in Web pages, defining, among other
+          things, their layout, colors, and fonts. Its latest version is CSS3.
+          SCSS is a syntax of
+          <abbr title="Syntactically Awesome StyleSheets">SASS</abbr> that is a
+          superset of CSS, adding to it some features.
+        </p>
         <code class="skills-content-text-box-code">h1 { color: red; }</code>
       </div>
       <div class="skills-content-text-box" id="text-javascript">
         <h4 class="skills-content-text-box-heading">JavaScript/ TypeScript</h4>
-        <p>JavaScript is a high-level, multi-paradigm, just-in-time compiled programming language. It is
-          used by 98% of websites because it has an <abbr title="Application Programming Interface">API</abbr>
-          for working with HTML Document Object Model, allowing add interactivity to it. All modern web
-          browsers have a JS engine. It also is used for server-side programming with Node.js or Deno. Typescript
-          is a superset of Javascript, adding to it new features, like static typing, interfaces, and namespaces.</p>
-          <code class="skills-content-text-box-code">console.log("Hey Jude");</code>
-        </div>
-        <div class="skills-content-text-box" id="text-python">
-          <h4 class="skills-content-text-box-heading">Python</h4>
-          <p>Python is a high-level, general-purpose, multi-paradigm, interpreted programming language. It
-            was designed to be simple and readable. It's present in data science, automation scripts, web
-            development, machine learning algorithms, scientific computing and much more.</p>
-            <code class="skills-content-text-box-code">print('Hey Jude')</code>
-          </div>
-          <div class="skills-content-text-box" id="text-c">
-            <h4 class="skills-content-text-box-heading">C</h4>
-            <p>C is a high-level, general-purpose, procedural programming language. It provides low-level memory
-              access and can run natively with minimal runtime support. It makes C suitable for operating systems,
-              databases, compilers, and embedded systems development. </p>
-            <code class="skills-content-text-box-code">printf("Hey Jude\n");</code>
-          </div>
-          <div class="skills-content-text-box" id="text-sqlite">
-            <h4 class="skills-content-text-box-heading">SQLite</h4>
-            <p>SQLite3 is a small, fast, self-contained, full-featured relational database engine. It is widely
-              used in embedded systems, mobile phone applications, web browsers, and many other applications.
-              It is also bindings to many programming languages.</p>
-            <code class="skills-content-text-box-code">SELECT * FROM skills;</code>
-          </div>
+        <p>
+          JavaScript is a high-level, multi-paradigm, just-in-time compiled
+          programming language. It is used by 98% of websites because it has an
+          <abbr title="Application Programming Interface">API</abbr> for working
+          with HTML Document Object Model, allowing add interactivity to it. All
+          modern web browsers have a JS engine. It also is used for server-side
+          programming with Node.js or Deno. Typescript is a superset of
+          Javascript, adding to it new features, like static typing, interfaces,
+          and namespaces.
+        </p>
+        <code class="skills-content-text-box-code"
+          >console.log("Hey Jude");</code
+        >
+      </div>
+      <div class="skills-content-text-box" id="text-python">
+        <h4 class="skills-content-text-box-heading">Python</h4>
+        <p>
+          Python is a high-level, general-purpose, multi-paradigm, interpreted
+          programming language. It was designed to be simple and readable. It's
+          present in data science, automation scripts, web development, machine
+          learning algorithms, scientific computing and much more.
+        </p>
+        <code class="skills-content-text-box-code">print('Hey Jude')</code>
+      </div>
+      <div class="skills-content-text-box" id="text-c">
+        <h4 class="skills-content-text-box-heading">C</h4>
+        <p>
+          C is a high-level, general-purpose, procedural programming language.
+          It provides low-level memory access and can run natively with minimal
+          runtime support. It makes C suitable for operating systems, databases,
+          compilers, and embedded systems development.
+        </p>
+        <code class="skills-content-text-box-code">printf("Hey Jude\n");</code>
+      </div>
+      <div class="skills-content-text-box" id="text-sqlite">
+        <h4 class="skills-content-text-box-heading">SQLite</h4>
+        <p>
+          SQLite3 is a small, fast, self-contained, full-featured relational
+          database engine. It is widely used in embedded systems, mobile phone
+          applications, web browsers, and many other applications. It is also
+          bindings to many programming languages.
+        </p>
+        <code class="skills-content-text-box-code">SELECT * FROM skills;</code>
+      </div>
     </div>
   </div>
 </div>
