--- a/src/components/social.ejs
+++ b/src/components/social.ejs
@@ -1,14 +1,32 @@
 <section class="container" id="social">
   <h2 class="container-heading" id="social-heading">Social</h2>
   <p class="container-text" id="social-text">Connect with me:</p>
-  <adiv id="social-div">
-    <div class="social-div-inner"><a target="_blank" href="https://github.com/amartinsmg"><i
-          class="fab fa-github"></i></a></div>
-    <div class="social-div-inner"><a target="_blank" href="https://linkedin.com/in/amartinsmg"><i
-          class="fab fa-linkedin"></i></a></div>
-    <div class="social-div-inner"><a target="_blank" href="https://instagram.com/amartinsmg"><i
-          class="fab fa-instagram"></i></a></div>
-    <div class="social-div-inner"><a target="_blank" href="https://t.me/amartinsmg"><i class="fab fa-telegram"></i></a>
+  <div id="social-div">
+    <div class="social-div-inner">
+      <a target="_blank" href="https://github.com/amartinsmg" title="Github"
+        ><i class="fab fa-github"></i
+      ></a>
     </div>
+    <div class="social-div-inner">
+      <a
+        target="_blank"
+        href="https://linkedin.com/in/amartinsmg"
+        title="LikedIn"
+        ><i class="fab fa-linkedin"></i
+      ></a>
     </div>
+    <div class="social-div-inner">
+      <a
+        target="_blank"
+        href="https://instagram.com/amartinsmg"
+        title="Instagram"
+        ><i class="fab fa-instagram"></i
+      ></a>
+    </div>
+    <div class="social-div-inner">
+      <a target="_blank" href="https://t.me/amartinsmg" title="Telegram"
+        ><i class="fab fa-telegram"></i
+      ></a>
+    </div>
+  </div>
 </section>
