--- a/src/sass/components/page-header.scss
+++ b/src/sass/components/page-header.scss
@@ -34,6 +34,7 @@
     &-toggle:checked ~ &-ul {
       li {
         height: 2.5rem;
+        font-size: 1.1rem;
         padding: 0.5rem;
       }
       li:not(:first-child) {
