--- a/src/sass/components/projects.scss
+++ b/src/sass/components/projects.scss
@@ -5,35 +5,37 @@
   &-text {
     padding-bottom: 1.5rem;
   }
-  img {
-    max-width: 100%;
-  }
   &-grid {
     @include f-col;
+    justify-content: center;
     align-items: center;
     gap: 2rem;
     .projects-div {
       width: 18rem;
       max-width: 100%;
+      &-img {
+        max-width: 100%;
+      }
       &-inner {
         @include f-col;
         justify-content: center;
         align-items: center;
+        text-align: center;
+        padding: 0.2rem 0;
         gap: 0.8rem;
         &-heading {
-          text-align: center;
           color: $secondary-color;
         }
         &-btn {
           width: fit-content;
-          background-color: $bg-color-4;
+          background-color: $bg-color-2;
           color: $primary-color;
           &:hover {
-            background-color: $bg-color-5;
+            background-color: $bg-color-4;
           }
         }
       }
-      @media (pointer: fine) {
+      @media screen and (pointer: fine) {
         position: relative;
         #project-grid-1-img {
           content: url("../../public/QFCalculator.png");
@@ -53,7 +55,6 @@
           right: 7%;
           padding: 5%;
           gap: 1.3rem;
-          text-align: center;
           background-color: #000000dd;
         }
       }
@@ -63,7 +64,6 @@
     &-grid {
       display: grid;
       gap: 1.5rem;
-      justify-content: center;
       grid-template: 1fr 1fr / 1fr 1fr;
     }  
   }
