--- a/src/sass/components/skills.scss
+++ b/src/sass/components/skills.scss
@@ -3,6 +3,7 @@
 
 .skills {
   @include f-col;
+  justify-content: center;
   min-height: $greeting-height;
   padding: 5%;
   gap: 5vh;
@@ -24,6 +25,9 @@
         color: $neutral-color-2;
         font-size: 1.5rem;
         cursor: pointer;
+        &:hover {
+          color: $neutral-color-1;
+        }
       }
     }
     &-text {
@@ -34,12 +38,11 @@
         flex-direction: column;
         justify-content: center;
         gap: 0.5rem;
+        text-align: center;
         &-heading {
           color: $secondary-color;
-          text-align: center;
         }
         &-code {
-          text-align: center;
           font: $font-2;
         }
       }
@@ -51,13 +54,9 @@
   @media screen and (min-width: 576px) {
     min-height: 24rem;
     gap: 2rem;
-    &-content-text-box {
-      text-align: center;
-    }
   }
   @media screen and (min-width: 810px) {
     min-height: 0;
-    justify-content: center;
     &-content {
       @include f-row;
       &-labels {
