--- a/src/sass/components/social.scss
+++ b/src/sass/components/social.scss
@@ -10,7 +10,7 @@
     gap: 1.4rem;
     font-size: 1.8rem;
     .social-div-inner:hover {
-      color: $bg-color-2;
+      color: $neutral-color-2;
     }
   }
 }
