--- a/src/components/page-footer.ejs
+++ b/src/components/page-footer.ejs
@@ -1,16 +1,26 @@
 <footer id="page-footer">
-  <p>
-    <small
-      >Made by <a href="https://github.com/amartinsmg">amartinsmg</a></small
-    >
-    .
+  <p id="page-footer-made-by">
+    <a target="_blank" href="https://github.com/amartinsmg/amartinsmg.github.io"
+      >Visit this project's repository</a
+    >.
+    <a target="_blank" href="https://github.com/amartinsmg"
+      >Made by amartinsmg</a
+    >.
   </p>
   <p>
     <small
-      ><a href="https://storyset.com/web"
-        >Programmer illustration by Storyset</a
-      ></small
+      ><a
+        target="_blank"
+        href="https://www.pexels.com/pt-br/foto/milk-way-2706654/"
+        >Galaxy picture by Nicole Avagliano on Pexels</a
+      >.</small
     >
-    .
+  </p>
+  <p>
+    <small>
+      <a target="_blank" href="https://storyset.com/web"
+        >Programmer illustration by Storyset</a
+      >.</small
+    >
   </p>
 </footer>
