--- a/src/sass/components/page-header.scss
+++ b/src/sass/components/page-header.scss
@@ -77,6 +77,9 @@
         overflow: hidden;
         background: $bg-color-3;
         transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+        &:hover {
+          background: $neutral-color-4;
+        }
       }
     }
   }
@@ -91,11 +94,14 @@
         flex-direction: row;
         height: 100%;
         margin: 0;
-        gap: 2rem;
         background: transparent;
         li {
-          height: 100%;
+          height: $header-height;
+          padding: 0 1rem;
           background: transparent;
+          &:hover {
+            background: $bg-color-4;
+          }
         }
       }
     }
