--- a/src/sass/components/greeting.scss
+++ b/src/sass/components/greeting.scss
@@ -6,7 +6,7 @@ $greeting-padding: 5vw;
 
 #greeting {
   min-height: $greeting-height;
-  background: url("../../public/sky.jpg") no-repeat fixed right center;
+  background: url("../../public/galaxy.jpg") no-repeat fixed right center;
   background-size: cover;
   padding: $greeting-padding;
   &-content {
