--- a/src/components/projects.ejs
+++ b/src/components/projects.ejs
@@ -3,7 +3,7 @@
   <p class="container-text" id="projects-text">These are some of my personal projects: </p>
   <div id="projects-grid">
     <div class="projects-div" id="project-grid-1">
-      <img class="projects-div-img" src="../public/QFCalculator.jpg" id="project-grid-1-img"
+      <img class="projects-div-img" src="../public/qfcalculator.png" id="project-grid-1-img"
         alt="print screen of Qudratic Function Calculator">
       <div class="projects-div-inner">
         <h4 class="projects-div-inner-heading">Quadratic Function Calculator</h4>
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="projects-div" id="project-grid-2">
-      <img class="projects-div-img" src="../public/CenturyCalculator.jpg" id="project-grid-2-img"
+      <img class="projects-div-img" src="../public/centurycalculator.png" id="project-grid-2-img"
         alt="print screen of Qudratic Function Calculator">
       <div class="projects-div-inner">
         <h4 class="projects-div-inner-heading">Century Calculator</h4>
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="projects-div" id="project-grid-3">
-        <img class="projects-div-img" src="../public/CNCalculator.jpg" id="project-grid-3-img"
+        <img class="projects-div-img" src="../public/cncalculator.png" id="project-grid-3-img"
         alt="print screen of Qudratic Function Calculator">
         <div class="projects-div-inner">
           <h4 class="projects-div-inner-heading">Complex Numbers Calculator</h4>
