--- a/src/components/projects.ejs
+++ b/src/components/projects.ejs
@@ -14,26 +14,26 @@
       </div>
     </div>
     <div class="projects-div" id="project-grid-2">
-      <img class="projects-div-img" src="../public/centurycalculator.png" id="project-grid-2-img"
-        alt="print screen of Qudratic Function Calculator">
+      <img class="projects-div-img" src="../public/periodic_table.png" id="project-grid-2-img"
+        alt="print screen of Periodic Table">
       <div class="projects-div-inner">
-        <h4 class="projects-div-inner-heading">Century Calculator</h4>
-        <p>It is a personal project that uses Embedded JavaScript (EJS), CSS, Bootstrap 5, TypeScript,
+        <h4 class="projects-div-inner-heading">Periodic Table</h4>
+        <p>It is a personal project that uses Embedded JavaScript (EJS), SASS, JavaScript,
           Babel, and Webpack.
         </p>
-        <a class="btn projects-div-inner-btn" target="_blank" href="https://github.com/amartinsmg/CenturyCalculator"
+        <a class="btn projects-div-inner-btn" target="_blank" href="https://github.com/amartinsmg/PeriodicTable"
           role="button"><i class="fab fa-github"></i> Complete project</a>
         </div>
       </div>
       <div class="projects-div" id="project-grid-3">
-        <img class="projects-div-img" src="../public/cncalculator.png" id="project-grid-3-img"
-        alt="print screen of Qudratic Function Calculator">
+        <img class="projects-div-img" src="../public/descrip_statis.png" id="project-grid-3-img"
+        alt="print screen of Descriptive Statistics Calculator">
         <div class="projects-div-inner">
-          <h4 class="projects-div-inner-heading">Complex Numbers Calculator</h4>
+          <h4 class="projects-div-inner-heading">Descriptive Statistics Calculator</h4>
           <p>It is a personal project that uses HTML, CSS, Bootstrap 5, TypeScript, Web Assembly, Babel,
             and Webpack.
           </p>
-          <a class="btn projects-div-inner-btn" target="_blank" href="https://github.com/amartinsmg/ComplexNumCalculator"
+          <a class="btn projects-div-inner-btn" target="_blank" href="https://github.com/amartinsmg/DescriptiveStatistics"
             role="button"><i class="fab fa-github"></i> Complete project</a>
       </div>
     </div>
