--- a/src/sass/components/projects.scss
+++ b/src/sass/components/projects.scss
@@ -41,7 +41,10 @@
           content: url("../../public/qfcalculator_square.png");
         }
         #project-grid-2-img {
-          content: url("../../public/centurycalculator_square.png");
+          content: url("../../public/periodic_table_square.png");
+        }
+        #project-grid-3-img {
+          content: url("../../public/descrip_statis_square.png");
         }
         &-img {
           aspect-ratio: 1 / 1;
