--- a/src/components/about.ejs
+++ b/src/components/about.ejs
@@ -2,11 +2,11 @@
   <h2 class="container-heading" id="about-heading">About</h2>
   <p class="container-text" id="about-text">
     ...I'm looking for my first job opportunity in IT. I have knowledge in web
-    development with HTML5, CSS3, SASS, JavaScript ES6+ and TypeScript, relational
-    databases, as well as knowledge in C and Python. Although I have no
-    professional experience in this area, I have knowledge acquired through
-    personal projects. I always try to keep myself updated and use development
-    best practices, always looking for a clean, reviewed and readable code.
+    development with HTML5, CSS3, SASS, JavaScript ES6+, TypeScript, and
+    relational databases. Although I have no professional experience in this
+    area, I have knowledge acquired through personal projects. I always try to
+    keep myself updated and use development best practices, always looking for a
+    clean, reviewed and readable code.
   </p>
   <%- include("./skills") %>
 </section>
