--- a/src/components/page-footer.ejs
+++ b/src/components/page-footer.ejs
@@ -1,26 +1,37 @@
 <footer id="page-footer">
-  <p id="page-footer-made-by">
-    <a target="_blank" href="https://github.com/amartinsmg/amartinsmg.github.io"
-      >Visit this project's repository</a
-    >.
-    <a target="_blank" href="https://github.com/amartinsmg"
-      >Made by amartinsmg</a
-    >.
-  </p>
-  <p>
-    <small
-      ><a
+  <div id="page-footer-text">
+    <p id="page-footer-text-made-by">
+      <a
         target="_blank"
-        href="https://www.pexels.com/pt-br/foto/milk-way-2706654/"
-        >Galaxy picture by Nicole Avagliano on Pexels</a
-      >.</small
-    >
-  </p>
-  <p>
-    <small>
-      <a target="_blank" href="https://storyset.com/web"
-        >Programmer illustration by Storyset</a
-      >.</small
-    >
-  </p>
+        href="https://github.com/amartinsmg/amartinsmg.github.io"
+        >Visit this project's repository</a
+      >.
+      <a target="_blank" href="https://github.com/amartinsmg"
+        >Made by amartinsmg</a
+      >.
+    </p>
+    <p>
+      <small
+        ><a
+          target="_blank"
+          href="https://www.pexels.com/pt-br/foto/milk-way-2706654/"
+          >Galaxy picture by Nicole Avagliano on Pexels</a
+        >.</small
+      >
+    </p>
+    <p>
+      <small>
+        <a target="_blank" href="https://storyset.com/web"
+          >Programmer illustration by Storyset</a
+        >.</small
+      >
+    </p>
+  </div>
+  <div id="page-footer-bar"></div>
+  <div id="page-footer-phrase">
+    <p id="page-footer-phrase-latin">Ad astra per aspera</p>
+    <p id="page-footer-phrase-translation">
+      &#8220;Through hardships to the stars&#8221;
+    </p>
+  </div>
 </footer>
