--- a/src/sass/components/page-footer.scss
+++ b/src/sass/components/page-footer.scss
@@ -3,13 +3,31 @@
 #page-footer {
   width: 90%;
   margin: 0 5%;
-  padding: 0 0 0.5rem;
-  font-size: 0.7rem;
   text-align: center;
-  &-made-by {
-    padding: 0 0 0.2rem;
+  &-text {
+    font-size: 0.7rem;
+    &-made-by {
+      padding: 0 0 0.2rem;
+    }
+    a:hover {
+      color: $neutral-color-2;
+    }
   }
-  a:hover {
-    color: $neutral-color-2;
+  &-bar {
+    height: 1px;
+    width: 60%;
+    margin: 3rem auto 0;
+    background-color: $primary-color;
+  }
+  &-phrase {
+    margin: 4rem 0;
+    &-latin {
+      font: $font-4;
+      font-size: 1.7em;
+      padding: 0 0 0.8rem;
+    }
+    &-translation {
+      font-size: 0.9em;
+    }
   }
 }
