--- a/src/components/skills.ejs
+++ b/src/components/skills.ejs
@@ -24,13 +24,13 @@
       type="radio"
       class="skills-content-radio"
       name="skill"
-      id="radio-python"
+      id="radio-c"
     />
     <input
       type="radio"
       class="skills-content-radio"
       name="skill"
-      id="radio-c"
+      id="radio-python"
     />
     <input
       type="radio"
@@ -48,11 +48,11 @@
       <label class="skills-content-labels-label" for="radio-javascript"
         ><i class="devicon-javascript-plain" title="JavaScript/ TypeScript"></i
       ></label>
-      <label class="skills-content-labels-label" for="radio-python"
-        ><i class="devicon-python-plain" title="Python"></i
-      ></label>
       <label class="skills-content-labels-label" for="radio-c"
         ><i class="devicon-c-plain" title="C"></i
+      ></label>
+      <label class="skills-content-labels-label" for="radio-python"
+        ><i class="devicon-python-plain" title="Python"></i
       ></label>
       <label class="skills-content-labels-label" for="radio-sqlite"
         ><i class="devicon-sqlite-plain" title="SQLite"></i
@@ -101,6 +101,18 @@
           >console.log("Hey Jude");</code
         >
       </div>
+      <div class="skills-content-text-box" id="text-c">
+        <h4 class="skills-content-text-box-heading">C/ C++</h4>
+        <p>
+          C is a high-level, general-purpose, procedural programming language,
+          and C++ is an extension of C with object-oriented programming
+          features. Both provide low-level memory access and can run natively
+          with minimal runtime support. Therefore, they are widely used for
+          system programming, like operating systems, databases, compilers, and
+          embedded.
+        </p>
+        <code class="skills-content-text-box-code">printf("Hey Jude\n");</code>
+      </div>
       <div class="skills-content-text-box" id="text-python">
         <h4 class="skills-content-text-box-heading">Python</h4>
         <p>
@@ -110,16 +122,6 @@
           learning algorithms, scientific computing and much more.
         </p>
         <code class="skills-content-text-box-code">print('Hey Jude')</code>
-      </div>
-      <div class="skills-content-text-box" id="text-c">
-        <h4 class="skills-content-text-box-heading">C</h4>
-        <p>
-          C is a high-level, general-purpose, procedural programming language.
-          It provides low-level memory access and can run natively with minimal
-          runtime support. It makes C suitable for operating systems, databases,
-          compilers, and embedded systems development.
-        </p>
-        <code class="skills-content-text-box-code">printf("Hey Jude\n");</code>
       </div>
       <div class="skills-content-text-box" id="text-sqlite">
         <h4 class="skills-content-text-box-heading">SQLite</h4>
