--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@500;600&family=Roboto:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@500;600&family=Roboto:ital,wght@0,300;0,400;1,70&display=swap');
 
 $header-height: 3rem;
 
@@ -23,4 +23,5 @@ $secondary-color: #FF689D;
 $font-1: normal 300 1em 'Roboto', sans-serif;
 $font-2: normal 500 1em 'Inconsolata', monospace;
 $font-3: normal 600 1em 'Inconsolata', monospace;
+$font-4: italic 700 1em 'Roboto', sans-serif;
 
