--- a/src/sass/elements/container.scss
+++ b/src/sass/elements/container.scss
@@ -10,6 +10,9 @@
   }
   &-text {
     padding: 2.5rem 0;
+    @media screen and (min-width: 768px) {
+      text-align: center;
+    }
   }
   @media screen and (min-width: 768px) {
     padding: 2.5rem 0;
