--- a/src/components/page-footer.ejs
+++ b/src/components/page-footer.ejs
@@ -28,10 +28,15 @@
     </p>
   </div>
   <div id="page-footer-bar"></div>
-  <div id="page-footer-phrase">
-    <p id="page-footer-phrase-latin">Ad astra per aspera</p>
-    <p id="page-footer-phrase-translation">
-      &#8220;Through hardships to the stars&#8221;
-    </p>
+  <div id="page-footer-bottom">
+    <div id="page-footer-bottom-emblem">
+      <img src="../public/emblem-light.png" alt="Emblem" />
+    </div>
+    <div id="page-footer-bottom-phrase">
+      <p id="page-footer-bottom-phrase-latin">Ad astra per aspera</p>
+      <p id="page-footer-bottom-phrase-translation">
+        &#8220;Through hardships to the stars&#8221;
+      </p>
+    </div>
   </div>
 </footer>
