--- a/src/components/page-header.ejs
+++ b/src/components/page-header.ejs
@@ -3,7 +3,7 @@
     <a href="#greeting" title="Home">
       <img
         id="page-header-logo"
-        src="../public/emblem-light.png"
+        src="../public/monogram-light.png"
         alt="coat of arms with a lion, surrounded by a laurel wreath and a crown above"
       />
     </a>
