--- a/src/components/skills.ejs
+++ b/src/components/skills.ejs
@@ -79,8 +79,7 @@
           describing the formatting of a document written in a markup language,
           such as HTML. It's widely used in Web pages, defining, among other
           things, their layout, colors, and fonts. Its latest version is CSS3.
-          SCSS is a syntax of
-          <abbr title="Syntactically Awesome StyleSheets">SASS</abbr> that is a
+          SCSS is a syntax of SASS (Syntactically Awesome StyleSheets) that is a
           superset of CSS, adding to it some features.
         </p>
         <code class="skills-content-text-box-code">h1 { color: red; }</code>
