--- a/src/sass/components/page-footer.scss
+++ b/src/sass/components/page-footer.scss
@@ -25,6 +25,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 4rem 0;
     gap: 2rem;
     &-emblem {
       img {
