--- a/src/components/about.ejs
+++ b/src/components/about.ejs
@@ -1,12 +1,13 @@
 <section id="about" class="container">
   <h2 class="container-heading" id="about-heading">About</h2>
   <p class="container-text" id="about-text">
-    ...I'm looking for my first job opportunity in IT. I have knowledge in web
-    development with HTML5, CSS3, SASS, JavaScript ES6+, TypeScript, and
-    relational databases. Although I have no professional experience in this
-    area, I have knowledge acquired through personal projects. I always try to
-    keep myself updated and use development best practices, always looking for a
-    clean, reviewed and readable code.
+    ...I'm seeking my first opportunity in the technology field, with skills in
+    web development (HTML5, CSS3, SASS, JavaScript ES6+, TypeScript) and
+    PostgreSQL database. Although lacking professional experience, I have
+    acquired knowledge through personal projects. Stay updated and committed to
+    best development practices, I prioritize clean and readable code. Determined
+    to grow and contribute to collaborative teams, I am ready to tackle
+    challenges and make a difference in the technology industry.
   </p>
   <%- include("./skills") %>
 </section>
