--- a/src/components/greeting.ejs
+++ b/src/components/greeting.ejs
@@ -8,7 +8,7 @@
           class="blinker-effect"
         ></i>
       </h1>
-      <p>I'm a web developer and computing engineering student...</p>
+      <p>I'm a web developer and computer engineering student...</p>
     </div>
     <img
       src="../public/programmer.png"
