--- a/src/components/page-footer.ejs
+++ b/src/components/page-footer.ejs
@@ -33,7 +33,7 @@
       <img src="../public/emblem-light.png" alt="Emblem" />
     </div>
     <div id="page-footer-bottom-phrase">
-      <p id="page-footer-bottom-phrase-latin">Ad astra per aspera</p>
+      <p id="page-footer-bottom-phrase-latin">Per aspera ad astra</p>
       <p id="page-footer-bottom-phrase-translation">
         &#8220;Through hardships to the stars&#8221;
       </p>
