--- a/src/sass/elements/container.scss
+++ b/src/sass/elements/container.scss
@@ -7,6 +7,11 @@
   &-heading {
     font: $font-3;
     font-size: 1.6rem;
+    @media screen and (min-width: 768px) {
+      text-align: center;
+      font-size: 2rem;
+      padding: 0.5rem 0;
+    }
   }
   &-text {
     padding: 2.5rem 0;
@@ -19,6 +24,6 @@
     width: 80%;
   }
   @media screen and (min-width: 1024px) {
-    padding: 3.25rem 0;
+    padding: 3.5rem 0;
   }
 }
